# skill-competencies-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: convert-skills.py  data.csv  data.yml  save.py
data/: data.csv  data.json  data.yml  framework.json
src/skill_competencies_converter/: convert-skills.py  convert_skills.py  create_user_profile.py  save.py  utilities.py
