[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill_competencies_converter"
dynamic = ["version", "readme"]
requires-python = ">=3.9"
description = "Convert skills and competency categories from CSV to JSON or YAML formats. Creates user profiles on JSON or YAML from CSV format."
license = { file = "LICENSE" }
authors = [
    { name = "Finn Bacall" },
    { name = "Aleksandra Nenadic" },
    { name = "Bryn Noel Ubald" }
    ]
maintainers = [
    { email = "finn.bacall@manchester.ac.uk" },
    { email = "a.nenadic@manchester.ac.uk" },
    { email = "bryald@bas.ac.uk" }
    ]
dependencies = [
    "pyyaml",
]
classifiers = [
  "Development Status :: 3",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Topic :: Education",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
skill_competencies_converter = "skill_competencies_converter.convert_skills:main"
create_user_profile =  "skill_competencies_converter.create_user_profile:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "skill_competencies_converter.__version__" }
readme = { file = ["README.md"] }

[project.optional-dependencies]
dev = []
docs = []

[project.urls]
"Source" = "https://github.com/direct-framework/skill-competencies-converter"
"Issue tracker" = "https://github.com/direct-framework/skill-competencies-converter/issues"
